# haploclique

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  circle.yml  install-additional-software.sh
cmake/: hc-ccache.cmake  hc-compilerflags.cmake  hc-dependencies.cmake
data/sequences/: arabis_mosaic_large.fasta  arabis_mosaic_virus.fasta
doc/: INSTALL.md  USAGE.md
scripts/: collapse_duplicates.py  haploclique-assembly  haploclique-assembly-auto  haploclique-local  haploclique-postprocess.py  haploclique.sh  manipulate_alignment_prior.py  postprocess-predictions  seek-singletons.py  simulate_sequences.py
src/: ASTagCalculator.cpp  ASTagCalculator.h  AlignmentRecord.cpp  AlignmentRecord.h  AnyDistributionEdgeCalculator.cpp  AnyDistributionEdgeCalculator.h  BamHelper.cpp  BamHelper.h  BamReader.h  BronKerbosch.cpp  BronKerbosch.h  CLEVER.cpp  CLEVER.h  CMakeLists.txt  Clique.cpp  Clique.h  CliqueCollector.h  CliqueFinder.cpp  CliqueFinder.h  CliqueWriter.cpp  CliqueWriter.h  CoverageMonitor.cpp  CoverageMonitor.h  CoverageWriter.cpp  CoverageWriter.h  Distributions.cpp  Distributions.h  EdgeCalculator.h  EdgeWriter.cpp  EdgeWriter.h  FastaReader.h  GaussianEdgeCalculator.cpp  GaussianEdgeCalculator.h  GroupWiseBamReader.cpp  GroupWiseBamReader.h  Histogram.cpp  Histogram.h  HistogramBasedDistribution.cpp  HistogramBasedDistribution.h  IndelLengthDistribution.cpp  (+40 more)
src/docopt/: docopt.cpp  docopt.h  docopt_private.h
test/: CMakeLists.txt  example.cpp
test/cram/: HIV-1_50_01.t  HIV-1_50_01_weakParam.t  arabis_large_500_01.t
test/data/simulation/: quasispecies_HIV-1_50.fasta.fasta  quasispecies_HIV-1_50_circleci.fasta  quasispecies_HIV-1_50_circleci.fasta.fasta  quasispecies_HIV-1_50_weakParam_circleci.fasta.fasta  reads_HIV-1_50_01.bam  reads_arabis_mosaic_virus_25_01.bam  temp.depth.txt
test/data/simulation/arabis_large_500_01/: haplo.fasta  quasispecies.fasta.fasta  reads.bam  ref.fasta
test/data/simulation/unit_data/: alignment_sample00.txt  alignment_sample01.txt  alignment_sample02.txt  alignment_sample03.txt  alignment_sample04.txt  alignment_sample05.txt  alignment_sample06.txt  alignment_sample07.txt  alignment_sample08.txt  alignment_sample09.txt  alignment_sample10.txt  alignment_sample11.txt  alignment_sample12.txt  alignment_sample13.txt  alignment_sample14.txt  reads_arabis_mosaic_virus_20nc.bam
test/unit/: CMakeLists.txt  unit1.cpp  unit2.cpp  unit3.cpp
